--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-linking": "~6.3.1",
     "expo-navigation-bar": "~3.0.7",
     "expo-router": "~3.5.18",
+    "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -45,6 +46,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-share": "^10.2.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-text-input-mask": "^3.2.0",
     "react-native-toast-message": "^2.2.0",
